# CMU_KDC_UAV_controls

./: README.md  pyproject.toml
data/aggressive_PID/: figure_8.bag_errors.csv  figure_8.bag_goal.csv  figure_8.bag_gt.csv  line.bag  line.bag_errors.csv  line.bag_goal.csv  line.bag_gt.csv  racetrack.bag_errors.csv  racetrack.bag_goal.csv  racetrack.bag_gt.csv
data/default_PID/: figure_8_PID_default.bag_errors.csv  figure_8_PID_default.bag_goal.csv  figure_8_PID_default.bag_gt.csv  line_PID_default.bag  line_PID_default.bag_errors.csv  line_PID_default.bag_goal.csv  line_PID_default.bag_gt.csv  line_at_start_PID_default.bag  line_at_start_PID_default.bag_errors.csv  line_at_start_PID_default.bag_goal.csv  line_at_start_PID_default.bag_gt.csv  racetrack_PID_default.bag_errors.csv  racetrack_PID_default.bag_goal.csv  racetrack_PID_default.bag_gt.csv
data/lqr_figure_8/: lqr_figure_8_v1.bag_errors.csv  lqr_figure_8_v1.bag_goal.csv  lqr_figure_8_v1.bag_gt.csv  lqr_figure_8_v12.bag  lqr_figure_8_v12.bag_errors.csv  lqr_figure_8_v12.bag_goal.csv  lqr_figure_8_v12.bag_gt.csv  lqr_figure_8_v2.bag_errors.csv  lqr_figure_8_v2.bag_goal.csv  lqr_figure_8_v2.bag_gt.csv  lqr_figure_8_v4.bag_errors.csv  lqr_figure_8_v4.bag_goal.csv  lqr_figure_8_v4.bag_gt.csv  lqr_figure_8_v8.bag_errors.csv  lqr_figure_8_v8.bag_goal.csv  lqr_figure_8_v8.bag_gt.csv
data/lqr_race_track/: lqr_race_track_v1.bag_errors.csv  lqr_race_track_v1.bag_goal.csv  lqr_race_track_v1.bag_gt.csv  (+13 more)
dev/: command_trajectory.py  publish_trajectory_track.py  read_xyz.py
lqr/: dynamic_simulation.py  lqr.py  main.py
(+23 files in other folders)
