[tool.poetry]
name = "cmu_kdc_uav_controls"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyvista = "^0.34.0"
matplotlib = "^3.5.1"
pathlib = {version = "^1.0.1", python = "<3.4"}
bagpy = "^0.4.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
